# adventofcode

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  README.md  advent  aoc  bacon.toml
common/src/: lib.rs
crates/common/: Cargo.toml
crates/day1/: Cargo.toml
crates/day1/src/: main.rs
crates/day2/: Cargo.toml
crates/day2/src/: main.rs
crates/day3/: Cargo.toml
crates/day3/src/: main.rs
crates/day4/: Cargo.toml
crates/day4/src/: main.rs
crates/day5/: Cargo.toml
crates/day5/src/: main.rs
crates/day6/: Cargo.toml
crates/day6/src/: main.rs
day1/: Cargo.toml
day1/src/: lib.rs
day2/: Cargo.toml
day2/src/: lib.rs
day3/: Cargo.toml
day3/src/: lib.rs
day4/src/: lib.rs
day5/: Cargo.toml
day5/src/: lib.rs  point.rs  segment.rs
lib/: Day1.rakumod  Day10.rakumod  Day2.rakumod  Day3.rakumod  Day4.rakumod  Day5.rakumod  Day6.rakumod  Day7.rakumod  Day8.rakumod  Day9.rakumod
main/: Cargo.toml
main/src/: cli.rs  fetch.rs  main.rs
rust/: .editorconfig  Cargo.toml
rust/src/: day1.rs  day2.rs  main.rs
src/: common.rs  day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  main.rs
src/day1/: mod.rs
src/day2/: intcode.rs  mod.rs
src/day3/: direction.rs  mod.rs  point.rs  wire.rs
