[workspace]
members = ["crates/*"]
default-members = ["crates/*"]


[workspace.package]
version = "2023.12.2"
edition = "2021"
authors = ["Roland Tepp <roland@tepp.info>"]

[workspace.dependencies]
atty = "0.2"
thiserror = "1"
anyhow = "1"
itertools = "0.12"
log = "0.4"


[package]
name = "aoc"
description = "Advent of Code 2023"
version.workspace = true
edition.workspace=true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4", features = ["cargo"]}
thiserror.workspace = true
anyhow.workspace = true
