[package]
name = "advent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quicli = "^0.4"
structopt = "^0.3"
simplelog = { version = "^0.11", features = ["paris"] }
reqwest = { version = "^0.11", features = ["blocking", "cookies"] }
cookie_store = "^0.15"
problem = "^5.3"
chrono = "^0.4"

common = { path = "../common" }
day1 = { path = "../day1" }
day2 = { path = "../day2" }
