[package]
name = "common"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
atty.workspace = true
itertools.workspace = true
log.workspace = true
